import "EmailMessage.proto";

message PasswordReset
{
    required EmailMessage.Type email_type = 1 [default = PasswordReset];
    required int32 user_id = 2;
}
